--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-modal": "^1.6.5"
   },
   "scripts": {
     "start": "react-scripts start",
