--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "classnames": "^2.2.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-modal": "^1.6.5"
+    "react-modal-dialog": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
