--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "classnames": "^2.2.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-modal-dialog": "^4.0.5"
+    "react-modal-dialog": "^4.0.5",
+    "react-notification-system": "^0.2.11"
   },
   "scripts": {
     "start": "react-scripts start",
