--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "devDependencies": {
     "react-scripts": "0.8.5"
   },
@@ -10,7 +11,12 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-modal-dialog": "^4.0.5",
-    "react-notification-system": "^0.2.11"
+    "react-notification-system": "^0.2.11",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
